Projects Numeral Spacing fix re: #13 and added tarot hover state re: 3

--- a/stylesmedia.css
+++ b/stylesmedia.css
@@ -189,7 +189,7 @@ h1 {
 
 .dev:nth-of-type(2) {
   position: absolute;
-  bottom: -1.5rem;
+  bottom: 1rem;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -547,6 +547,17 @@ h1 {
     transition-delay: 0.6s;
   }
 
+  .card-link:hover {
+    transition: 0.3s ease-in;
+    cursor: pointer;
+    width: 210px;
+  }
+
+  .card-link:hover::after {
+    transition: 0.5s ease-in;
+    margin-bottom: -20px;
+  }
+
   .tarot-back {
     display: block;
     position: absolute;
@@ -798,7 +809,10 @@ h1 {
 
   .roman-cap {
     font-size: 8em;
-    text-align: justify;
+  }
+
+  .roman-cap-3 {
+    margin-right: 3rem;
   }
 
   .project-link {
